# aruco-raspi3

./: .gitignore  .tags  CMakeLists.txt  README.md  midterm-report.tex
src/: CameraCallibrator.cpp  CameraCallibrator.h  calibrateCamera.cpp  detectMarker.cpp  generateMarkers.cpp
src/CameraCalibration/: CameraCalibrator.cpp  CameraCalibrator.h  calibrateCamera.cpp
src/FindArucoMarkers/: ArucoDetector.cpp  ArucoDetector.h  MarkerDetector.cpp  calibration.txt  detectMarker.cpp  generateMarkers.cpp
src/GenerateDictionary/: DictionaryGenerator.cpp  DictionaryGenerator.h  generateDictionary.cpp
src/Util/: detectMarker.cpp  findChessBoard.cpp  getWaitKeyValue.py
