cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project("aruco-pi3")
find_package( OpenCV REQUIRED )
add_executable(findChessBoard src/Util/findChessBoard.cpp)
add_executable(md src/FindArucoMarkers/MarkerDetector.cpp)
add_executable(gm src/FindArucoMarkers/generateMarkers.cpp)
add_executable(calibrateCamera src/CameraCalibration/calibrateCamera.cpp)
add_library(CameraCalibrator SHARED src/CameraCalibration/CameraCalibrator.cpp)
add_library(ArucoDetector SHARED src/FindArucoMarkers/ArucoDetector.cpp)
target_link_libraries(findChessBoard ${OpenCV_LIBS} )
target_link_libraries( md ${OpenCV_LIBS} )
target_link_libraries( md ArucoDetector)
target_link_libraries( gm ${OpenCV_LIBS} )
target_link_libraries(calibrateCamera CameraCalibrator)
target_link_libraries( calibrateCamera ${OpenCV_LIBS} )
